<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MTsN 3 Rokan Hulu </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="baca_selengkapnya"><![CDATA[Baca Selengkapnya>>]]></string>
    <string name="hari">Hari</string>
    <string name="sumber">Sumber</string>
    <string name="profil_sekolah">Profil Sekolah</string>
    <string name="prestasi_siswa">Prestasi Siswa</string>
    <string name="galeri">Galeri</string>
    <string name="lupa_kata_sandi"><u>Lupa Kata Sandi?</u></string>
    <string name="password">Password</string>
    <string name="user_name">Member Id</string>
    <string name="login">Login</string>
    <string name="tanggal">   409</string>
    <string name="member_id">Member Id</string>
    <string name="member_id2">member id</string>
    <string name="member_name">member_name</string>
    <string name="since_data">since_data</string>
    <string name="kategori">Kategori</string>
    <string name="register">Register</string>
    <string name="expired">EXPIRED</string>
    <string name="user_id">User ID</string>
    <string name="nama_buku">Judul Buku</string>
    <string name="pinjam_buku">2020-17-19</string>
    <string name="pinjaman_saya_saat_ini">Pinjaman Saya Saat Ini</string>
    <string name="kode_item">KODE ITEM</string>
    <string name="tanggal_pinjam">TANGGAL \nPINJAM</string>
    <string name="isreturn">isreturn</string>
    <string name="terlambat">Terlambat</string>
    <string name="bahasa_indonesia">Pendidikan Pancasila dan Kewarganegaraan untuk SMP/MTs kelas IX</string>
    <string name="penerbit">Penerbit</string>
    <string name="detail">Detail</string>
    <string name="data_collection">Data Collection</string>
    <string name="new_collection">New Collection</string>
    <string name="gagal">gagal</string>
    <string name="perpustakaan_nmtsn_3_rokan_hulu">Perpustakaan \nMTsN 3 Rokan Hulu</string>
    <string name="detail_buku">Detail Buku</string>
    <string name="edisi">Edisi</string>
    <string name="isbn">ISBN</string>
    <string name="tahun_rilis">Tahun Rilis</string>
    <string name="ciri_ciri_fisik_buku">Ciri-ciri Fisik Buku</string>
    <string name="bahasa">Bahasa</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="hubungi_pustakawan">Hubungi Pustakawan</string>
    <string name="perpustakaan_nmtsn_3_rokan_hulu2">Perpustakaan \nMTsN 3 Rokan Hulu</string>
    <string name="sudah_absen_nhari_ini">Sudah Absen\nHari Ini?</string>
    <string name="lihat_rekap">Lihat Rekap</string>
    <string name="mtsn_3_rohul">MTsN 3 Rohul</string>
    <string name="simpan">Simpan</string>
    <string name="setelah">Hasil Rekap Bisa di export ke PDF</string>
    <string name="username">Username</string>
    <string name="id">Tanggal</string>
    <string name="masuk">Masuk</string>
    <string name="pulang">Pulang</string>
    <string name="update">Simpan</string>
    <string name="septika_khairunnisa_m_pd">Septika Khairunnisa, M.Pd</string>
    <string name="s1">S1</string>
    <string name="guru_matematika">Guru Matematika</string>
    <string name="wali_kelas_viii_1">Wali Kelas VIII.1</string>
    <string name="hapus">Hapus</string>
    <string name="hapus_semua">Hapus Semua</string>
    <string name="input_pulang">Input Pulang</string>
    <string name="no">No</string>
    <string name="ttd">TTD</string>
    <string name="input_jam_pulang">Input Jam \nPulang!</string>
    <string name="kedatangan">Kedatangan</string>
    <string name="belum_login">Belum Login</string>
    <string name="nama">Nama</string>
    <string name="nip">NIP</string>
    <string name="pdf">Semua PDF Disatukan</string>
    <string name="bulan">Bulan</string>
    <string name="unit">UNIT</string>
    <string name="titikdua">:</string>
    <string name="lokasi_rekap_absen">Lokasi Rekap Absen</string>
    <string name="send_to">Send_mail</string>
    <string name="youtube">Lihat di Youtube</string>
    <string name="desc">  MTsN 3 Rokan Hulu adalah sebuah madrasah yang terletak di kota Pasir Pengaraian. Madrasah ini memiliki visi untuk menerapkan teknologi guna menciptakan prestasi yang gemilang bagi para siswanya. Dalam upaya mencapai visi tersebut, MTsN 3 Rokan Hulu didukung oleh tenaga pengajar yang kompeten dan berpengalaman di bidangnya masing-masing. Para guru di MTsN 3 Rokan Hulu tidak hanya menguasai materi akademik, tetapi juga memiliki kemampuan untuk memanfaatkan teknologi sebagai alat bantu dalam proses pembelajaran. Hal ini bertujuan untuk meningkatkan kualitas pendidikan dan menghasilkan lulusan yang tidak hanya memiliki pengetahuan yang luas, tetapi juga keterampilan praktis yang dapat diterapkan di dunia nyata. Dengan demikian, MTsN 3 Rokan Hulu berkomitmen untuk mencetak generasi yang mampu bersaing di era globalisasi ini.</string>
    <string name="tentang_kami">Tentang Kami</string>
    <string name="hubungi_kami">Identitas Sekolah</string>
    <string name="alamat">Jl. Tuanku Tambusai, Pematang berangan, Rambah, Kabupaten Rokan Hulu, Riau</string>
    <string name="akreditasi">Akreditasi A</string>
    <string name="jumlah_guru">Jumlah Guru</string>
    <string name="jumlah_tu">Jumlah TU</string>
    <string name="jumlah_siswa">Jumlah Siswa</string>
    <string name="tahun">Januari 2022</string>
    <string name="kepala_madrasah">Kepala Madrasah</string>
    <string name="kamad">Dewi Sami Wardani, M.Pd</string>
    <string name="h_syamsurizal_s_pd_i">H. Syamsurizal, S.Pd.I</string>
    <string name="kepala_tata_usaha">Kepala Tata Usaha</string>
    <string name="sepak_bola">Sepak Bola</string>
    <string name="judul">Judul</string>
    <string name="jadwal_ekskul">Jadwal Ekskul</string>
    <string name="ekskul">Ektrakurikuler</string>
    <string name="desc_Eskul">Temukan minat dan bakatmu melalui kegiatan ekstrakurikuler di madrasah</string>
    <string name="join">Join</string>

    <string name="some_error_occurred">Some error occurred</string>
    <string name="start">unduh</string>
    <string name="completed">completed</string>
    <string name="pause">pause</string>
    <string name="cancel">batal</string>
    <string name="resume">lanjut</string>
    <string name="restart">restart</string>
    <string name="mapel">Mapel</string>
    <string name="download">Download</string>
    <string name="selesai">Selesai Diunduh</string>
    <string name="modul_pembelajaran">Modul Pembelajaran Kurikulum Merdeka</string>
    <string name="mts_negeri_3_rokan_hulu">MTs Negeri 3 Rokan Hulu</string>
    <string name="perangkat_pembelajaran">Perangkat Pembelajaran</string>
    <string name="jabatan_tambahan">Jabatan Tambahan</string>
    <string name="pendidikan_terakhir">Pendidikan Terakhir</string>
    <string name="total">Total</string>
    <string name="_68_pegawai_tu_dan_guru">68 Pegawai TU dan Guru</string>
    <string name="logout">logout</string>
    <string name="next">LANJUT</string>
    <string name="skip">LEWATI</string>
    <string name="whatsnew">Whats New</string>
    <string name="lanjut">Lanjut</string>
    <string name="lewati">Lewati</string>
    <string name="deskripsi_intro">Aplikasi MTsN 3 Rohul memiliki beberapa pembaruan dan membagikannya kepada Anda.</string>
    <string name="e_library">PPDB Online </string>
    <string name="new_design">New Design</string>
    <string name="yt">Security Update</string>
    <string name="yt_desc">Pembaruan Keamanan Sistem Ujian untuk Mendukung Pelaksanaan Ujian yang Jujur</string>
    <string name="new_designdesc">Desain Baru Fitur Ujian untuk Pengalaman Pengguna yang Lebih Mudah dan Efisien </string>
    <string name="geser"><![CDATA[<< Geser >>]]></string>
    <string name="bergabung">Bergabung</string>
    <string name="prota_prosem_rpp_dan_silabus">Prota, Prosem, RPP, dan Silabus</string>
    <string name="vii">VII</string>
    <string name="viii">VIII</string>
    <string name="ix">IX</string>
    <string name="denda">Denda</string>
    <string name="total_denda">Total Denda</string>
    <string name="geser2"><![CDATA[Geser>>]]></string>
    <string name="pengarang">Yuyus kardiman</string>
    <string name="jumlah_buku_100_eksemplar">Jumlah Buku = </string>
    <string name="jabatan">Jabatan</string>
    <string name="kelas">Kelas</string>
    <string name="modul_disusun_oleh_guru_mtsn_3_rokan_hulu">Modul/Bahan Ajar Kurikulum Merdeka</string>
    <string name="instagram">TikTok</string>
    <string name="mtsn3rohul_2021">mtsn3rohul@2021</string>
    <string name="rekap_absen">Rekap Absen</string>
    <string name="tidakadapinjaman">Tidak ada buku dipinjam</string>
    <string name="_54_guru">54 Guru</string>
    <string name="a_z">A-Z</string>
    <string name="call">Hubungi \nSiswa</string>
    <string name="kembalikan">Kembalikan</string>s
    <string name="hintlistloan">2020 = kelas IX \n2021 = Kelas VIII \n2022 = Kelas VII</string>
    <string name="kode_item2">Kode Item</string>
    <string name="batas_pengembalian">Batas Pengembalian</string>
    <string name="judul_buku">Judul \nBuku</string>
    <string name="status">Status</string>
    <string name="tanggal_nbuku_dipinjam">Tanggal \nBuku Dipinjam</string>
    <string name="hubungi_norang_tua">Hubungi \nOrang Tua</string>
    <string name="namalengkap">Nama Lengkap</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="nomor_orang_tua">Nomor Orang Tua</string>
    <string name="tanggal_register">Tanggal Register</string>
    <string name="not_device_owner">System Security \nActivated</string>
    <string name="device_owner">You are admin!</string>
    <string name="stop_lock_task">Stop lock task</string>
    <string name="start_lock_task">Start lock task</string>
    <string name="install">Install application</string>
    <string name="todo">TODO</string>
    <string name="back">back</string>
    <string name="pin">PIN</string>
    <string name="_1090">1090</string>
    <string name="decs_sim">Fitur ini berfungsi sebagai gambaran pelaksanaan ujian. Jika halaman ini menampilkan soal, berarti pembelian paket internet Anda sudah sesuai. Harap diperhatikan, jika soal tidak tampil, kemungkinan besar Anda telah membeli paket internet yang tidak tepat. Pastikan untuk membeli paket reguler, bukan paket internet khusus untuk game atau media sosial.</string>
    <string name="ppdb">Penerimaan Peserta Didik Baru</string>
    <string name="unitIklanid">ca-app-pub-7121922599541432/8953321700</string>
    <string name="bug_fixes">PPDB online di MTsN 3 Rokan Hulu memudahkan calon siswa untuk mendaftar secara praktis dan efisien, tanpa harus datang langsung ke madrasah.</string>
</resources>