<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="7dp"
    tools:context=".Adapter.Adapter_DetailBuku">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:orientation="vertical"
        app:cardElevation="3dp"
        app:cardCornerRadius="4dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:id="@+id/cardDetail">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sanserif"
                android:textColor="@color/black"
                android:text="@string/edisi"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/interfacemedium"
                android:id="@+id/txedition"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/sanserif"
                android:text="@string/isbn"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/interfacemedium"
                android:id="@+id/txisbn"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sanserif"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:text="@string/tahun_rilis"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/interfacemedium"
                android:id="@+id/txpublishYear"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sanserif"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:text="@string/ciri_ciri_fisik_buku"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/interfacemedium"
                android:id="@+id/txcollation"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/sanserif"
                android:text="@string/bahasa"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/interfacemedium"
                android:id="@+id/txlanguage"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sanserif"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:text="@string/deskripsi"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/interfacemedium"
                android:id="@+id/txnotes"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>





</RelativeLayout>