<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#EEEEEE"
    android:padding="@dimen/small10sp"
    android:layout_height="match_parent"
    tools:context=".Ui.Input_Loan">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_perpus"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/tx_hint"
        android:text="@string/hintlistloan"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="306dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_margin="7dp"
            android:layout_height="wrap_content"
            android:hint="@string/member_id">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/mt_memberid"
                android:inputType="number"
                android:fontFamily="@font/proximanovaregular"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <AutoCompleteTextView
            android:id="@+id/atx_NamaBuku"
            android:layout_margin="7dp"
            android:layout_width="match_parent"
            android:fontFamily="@font/proximanovaregular"
            android:layout_height="wrap_content"
            android:hint="@string/nama_buku"
            app:layout_constraintTop_toBottomOf="@+id/tx_hint" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_margin="7dp"
        android:layout_height="wrap_content"
        android:hint="@string/batas_pengembalian">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/mt_expiredloan"
            android:fontFamily="@font/proximanovaregular"
            android:editable="false"
            android:clickable="true"
            android:layout_height="wrap_content"
            tools:ignore="Deprecated"
            android:focusable="true" />
    </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_insert"
            style="@style/Font_family_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_button"
            android:text="@string/simpan"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>


</LinearLayout>