<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="7dp"
    android:orientation="vertical"
    tools:context=".Adapter.Adapter_ProfilGuru">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="3dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:padding="7dp"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                app:cardCornerRadius="3dp"
                android:id="@+id/bingkai_osima"
                app:cardElevation="3dp"
                android:layout_height="100dp">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:id="@+id/id_imageosima"
                    tools:src="@tools:sample/avatars"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:id="@+id/id_profilgr"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/bingkai_osima"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/id_namaos"
                        style="@style/profil_guru"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/septika_khairunnisa_m_pd" />

                </RelativeLayout>



                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/id_TTLgr"
                        android:visibility="gone"
                        style="@style/profil_guru_subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/interfacemedium"
                        android:text="@string/tanggal" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        style="@style/profil_guru_subtitle"
                        android:text="@string/jabatan"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/profil_guru_subtitle"
                        android:text=": "/>

                    <TextView
                        android:id="@+id/id_Jabatan"
                        style="@style/profil_guru_subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/interfacemedium"
                        android:text="@string/s1" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        style="@style/profil_guru_subtitle"
                        android:text="@string/kelas"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/profil_guru_subtitle"
                        android:text=": "/>
                    <TextView
                        android:id="@+id/id_Kelas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/profil_guru_subtitle"
                        android:fontFamily="@font/interfacemedium"
                        android:text="@string/wali_kelas_viii_1" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>